@@ -17,14 +17,14 @@
 package com.netflix.spinnaker.clouddriver.lambda.provider.agent;
 
 import static com.netflix.spinnaker.cats.agent.AgentDataType.Authority.AUTHORITATIVE;
-import static com.netflix.spinnaker.cats.agent.AgentDataType.Authority.INFORMATIVE;
-import static com.netflix.spinnaker.clouddriver.core.provider.agent.Namespace.APPLICATIONS;
 import static com.netflix.spinnaker.clouddriver.core.provider.agent.Namespace.ON_DEMAND;
+import static com.netflix.spinnaker.clouddriver.lambda.cache.Keys.Namespace.LAMBDA_APPLICATIONS;
 import static com.netflix.spinnaker.clouddriver.lambda.cache.Keys.Namespace.LAMBDA_FUNCTIONS;
 import static java.util.stream.Collectors.toSet;
 
 import com.amazonaws.services.lambda.model.*;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.CaseFormat;
 import com.netflix.frigga.Names;
 import com.netflix.spectator.api.DefaultRegistry;
@@ -47,33 +47,37 @@ import com.netflix.spinnaker.clouddriver.cache.OnDemandMetricsSupport;
 import com.netflix.spinnaker.clouddriver.cache.OnDemandType;
 import com.netflix.spinnaker.clouddriver.core.limits.ServiceLimitConfiguration;
 import com.netflix.spinnaker.clouddriver.lambda.cache.Keys;
+import com.netflix.spinnaker.clouddriver.lambda.names.LambdaResource;
+import com.netflix.spinnaker.clouddriver.lambda.names.LambdaResourceFunction;
 import com.netflix.spinnaker.clouddriver.lambda.service.LambdaService;
+import com.netflix.spinnaker.clouddriver.names.NamerRegistry;
 import com.netflix.spinnaker.config.LambdaServiceConfig;
 import com.netflix.spinnaker.kork.exceptions.SpinnakerException;
+import com.netflix.spinnaker.moniker.Moniker;
+import com.netflix.spinnaker.moniker.Namer;
 import java.time.Clock;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
+import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 
 @Slf4j
 public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandAgent {
   private static final Set<AgentDataType> types =
-      new HashSet<>() {
-        {
-          add(AUTHORITATIVE.forType(LAMBDA_FUNCTIONS.ns));
-          add(INFORMATIVE.forType(APPLICATIONS.ns));
-        }
-      };
+      Set.of(
+          AUTHORITATIVE.forType(LAMBDA_FUNCTIONS.ns),
+          AUTHORITATIVE.forType(LAMBDA_APPLICATIONS.ns));
 
   private final NetflixAmazonCredentials account;
   private final String region;
   private OnDemandMetricsSupport metricsSupport;
   private final Registry registry;
   private final Clock clock = Clock.systemDefaultZone();
-  private LambdaService lambdaService;
+  @Setter @VisibleForTesting private LambdaService lambdaService;
+  private final Namer<LambdaResource> naming;
 
   LambdaCachingAgent(
       ObjectMapper objectMapper,
@@ -82,6 +86,28 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
       String region,
       LambdaServiceConfig lambdaServiceConfig,
       ServiceLimitConfiguration serviceLimitConfiguration) {
+    this(
+        objectMapper,
+        amazonClientProvider,
+        account,
+        region,
+        lambdaServiceConfig,
+        serviceLimitConfiguration,
+        NamerRegistry.lookup()
+            .withProvider(AmazonCloudProvider.ID)
+            .withAccount(account.getName())
+            .withResource(LambdaResource.class));
+  }
+
+  @VisibleForTesting
+  LambdaCachingAgent(
+      ObjectMapper objectMapper,
+      AmazonClientProvider amazonClientProvider,
+      NetflixAmazonCredentials account,
+      String region,
+      LambdaServiceConfig lambdaServiceConfig,
+      ServiceLimitConfiguration serviceLimitConfiguration,
+      Namer<LambdaResource> naming) {
     this.account = account;
     this.region = region;
     this.registry = new DefaultRegistry();
@@ -92,6 +118,7 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
             AmazonCloudProvider.ID + ":" + AmazonCloudProvider.ID + ":" + OnDemandType.Function);
     this.lambdaService =
         new LambdaService(amazonClientProvider, account, region, objectMapper, lambdaServiceConfig);
+    this.naming = naming;
   }
 
   @Override
@@ -122,7 +149,9 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
   public CacheResult loadData(ProviderCache providerCache) {
     long loadDataStart = clock.instant().toEpochMilli();
     log.info("Describing items in {}", getAgentType());
-
+    // This is a map to allow easy lookup by function id for onDemand handling.  The values list is
+    // the only thing
+    // that's actually passed upwards.
     Map<String, CacheData> lambdaCacheData = new ConcurrentHashMap<>();
     Map<String, Collection<String>> appLambdaRelationships = new ConcurrentHashMap<>();
 
@@ -154,7 +183,7 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
                     Keys.getLambdaFunctionKey(getAccountName(), getRegion(), "*")))
             .stream()
             .filter(d -> (int) d.getAttributes().get("processedCount") == 0)
-            .collect(Collectors.toList());
+            .toList();
 
     for (CacheData onDemandItem : onDemandCacheData) {
       try {
@@ -172,7 +201,9 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
             if (onDemandLastModified.isAfter(currentLambdaLastModified)) {
               lambdaCacheData.put(onDemandItem.getId(), onDemandItem);
               String appKey =
-                  onDemandItem.getRelationships().get(APPLICATIONS.ns).stream().findFirst().get();
+                  onDemandItem.getRelationships().get(LAMBDA_APPLICATIONS.ns).stream()
+                      .findFirst()
+                      .get();
               Collection<String> functionkeys =
                   appLambdaRelationships.getOrDefault(appKey, new ArrayList<>());
               functionkeys.add(onDemandItem.getId());
@@ -181,7 +212,9 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
           } else {
             lambdaCacheData.put(onDemandItem.getId(), onDemandItem);
             String appKey =
-                onDemandItem.getRelationships().get(APPLICATIONS.ns).stream().findFirst().get();
+                onDemandItem.getRelationships().get(LAMBDA_APPLICATIONS.ns).stream()
+                    .findFirst()
+                    .get();
             Collection<String> functionkeys =
                 appLambdaRelationships.getOrDefault(appKey, new ArrayList<>());
             functionkeys.add(onDemandItem.getId());
@@ -197,20 +230,23 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
       }
     }
 
-    // Create the INFORMATIVE spinnaker application cache with lambda relationships
+    // Create the AUTHORITATIVE lambda application cache with lambda function relationships
     Collection<CacheData> appCacheData = new LinkedList<>();
     for (String appKey : appLambdaRelationships.keySet()) {
       appCacheData.add(
           new DefaultCacheData(
               appKey,
-              Collections.emptyMap(),
+              Map.of(
+                  "application", Keys.parse(appKey).get("application"),
+                  "account", account.getName(),
+                  "region", region),
               Collections.singletonMap(LAMBDA_FUNCTIONS.ns, appLambdaRelationships.get(appKey))));
     }
 
     Map<String, Collection<CacheData>> cacheResults = new HashMap<>();
 
     cacheResults.put(LAMBDA_FUNCTIONS.ns, lambdaCacheData.values());
-    cacheResults.put(APPLICATIONS.ns, appCacheData);
+    cacheResults.put(LAMBDA_APPLICATIONS.ns, appCacheData);
     cacheResults.put(ON_DEMAND.ns, processedOnDemandCache);
 
     Map<String, Collection<String>> evictions =
@@ -224,45 +260,39 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
       Map<String, CacheData> lambdaCacheData,
       Map<String, Collection<String>> appLambdaRelationships,
       List<Map<String, Object>> allLambdas) {
-    allLambdas.stream()
-        .forEach(
-            lf -> {
-              String functionName = (String) lf.get("functionName");
-              String functionKey =
-                  Keys.getLambdaFunctionKey(getAccountName(), getRegion(), functionName);
-
-              /* TODO: If the functionName follows frigga by chance (i.e. somename-someothername), it will try to store the
-                 lambda as a relationship with the app name (somename), even if it wasn't deployed by spinnaker!
-              */
-              // Add the spinnaker application relationship and store it
-              Names names = Names.parseName(functionName);
-              if (names.getApp() != null) {
-                String appKey =
-                    com.netflix.spinnaker.clouddriver.aws.data.Keys.getApplicationKey(
-                        names.getApp());
-                appLambdaRelationships.compute(
-                    appKey,
-                    (k, v) -> {
-                      Collection<String> fKeys = v;
-                      if (fKeys == null) fKeys = new ArrayList<>();
-                      fKeys.add(functionKey);
-                      return fKeys;
-                    });
-                // No other thread should be putting the same function in this map. Its safe to use
-                // put
-                lambdaCacheData.put(
+    allLambdas.forEach(
+        lf -> {
+          String functionName = (String) lf.get("functionName");
+          String functionKey =
+              Keys.getLambdaFunctionKey(getAccountName(), getRegion(), functionName);
+          // Use the naming strategy to derive the moniker from the function name and tags
+          Moniker moniker = naming.deriveMoniker(new LambdaResourceFunction(lf));
+          // Technically this should NEVER be null, as functionName is implicit & required in the
+          // API call.
+          // App is derived then from the text before the dash... aka... it's ALWAYS set.
+          if (moniker.getApp() != null) {
+            String appKey = Keys.getApplicationKey(moniker.getApp());
+            appLambdaRelationships.compute(
+                appKey,
+                (k, v) -> {
+                  Collection<String> fKeys = v;
+                  if (fKeys == null) fKeys = new ArrayList<>();
+                  fKeys.add(functionKey);
+                  return fKeys;
+                });
+            lambdaCacheData.put(
+                functionKey,
+                new DefaultCacheData(
                     functionKey,
-                    new DefaultCacheData(
-                        functionKey,
-                        lf,
-                        Collections.singletonMap(
-                            APPLICATIONS.ns, Collections.singletonList(appKey))));
-              } else {
-                // TODO: Do we care about non spinnaker deployed lambdas?
-                lambdaCacheData.put(
-                    functionKey, new DefaultCacheData(functionKey, lf, Collections.emptyMap()));
-              }
-            });
+                    lf,
+                    Collections.singletonMap(
+                        LAMBDA_FUNCTIONS.ns, Collections.singletonList(functionKey))));
+          } else {
+            // TODO: Do we care about non spinnaker deployed lambdas?
+            lambdaCacheData.put(
+                functionKey, new DefaultCacheData(functionKey, lf, Collections.emptyMap()));
+          }
+        });
   }
 
   @Override
@@ -285,7 +315,7 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
         Keys.getLambdaFunctionKey(
             (String) data.get("credentials"), (String) data.get("region"), functionName);
 
-    String appKey = com.netflix.spinnaker.clouddriver.aws.data.Keys.getApplicationKey(appName);
+    String appKey = Keys.getApplicationKey(appName);
 
     Map<String, Object> lambdaAttributes = null;
     try {
@@ -309,7 +339,7 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
           new DefaultCacheData(
               functionKey,
               lambdaAttributes,
-              Collections.singletonMap(APPLICATIONS.ns, Collections.singletonList(appKey)));
+              Collections.singletonMap(LAMBDA_APPLICATIONS.ns, Collections.singletonList(appKey)));
 
       defaultCacheResult =
           new DefaultCacheResult(
@@ -382,35 +412,25 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
   }
 
   /**
-   * Provides the key namespace that the caching agent is authoritative of. Currently only supports
-   * the caching agent being authoritative over one key namespace. Taken from
-   * AbstractEcsCachingAgent
+   * Provides the key namespaces that the caching agent is authoritative for.
    *
-   * @return Key namespace.
+   * @return Collection of key namespaces.
    */
-  String getAuthoritativeKeyName() {
-    Collection<AgentDataType> authoritativeNamespaces =
-        getProvidedDataTypes().stream()
-            .filter(agentDataType -> agentDataType.getAuthority().equals(AUTHORITATIVE))
-            .collect(Collectors.toSet());
-
-    if (authoritativeNamespaces.size() != 1) {
-      throw new RuntimeException(
-          "LambdaCachingAgent supports only one authoritative key namespace. "
-              + authoritativeNamespaces.size()
-              + " authoritative key namespace were given.");
-    }
-
-    return authoritativeNamespaces.iterator().next().getTypeName();
+  Collection<String> getAuthoritativeKeyNames() {
+    return getProvidedDataTypes().stream()
+        .filter(agentDataType -> agentDataType.getAuthority().equals(AUTHORITATIVE))
+        .map(AgentDataType::getTypeName)
+        .collect(Collectors.toSet());
   }
 
   Map<String, Collection<String>> computeEvictableData(
       Collection<CacheData> newData, ProviderCache providerCache) {
 
-    // Get all old keys from the cache for the region and account
-    String authoritativeKeyName = getAuthoritativeKeyName();
+    // Only compute evictions for LAMBDA_FUNCTIONS namespace
+    // LAMBDA_APPLICATIONS namespace is evicted separately by application cleanup agents
+    String lambdaFunctionsNamespace = LAMBDA_FUNCTIONS.ns;
     Set<String> oldKeys =
-        providerCache.getIdentifiers(authoritativeKeyName).stream()
+        providerCache.getIdentifiers(lambdaFunctionsNamespace).stream()
             .filter(
                 key -> {
                   Map<String, String> keyParts = Keys.parse(key);
@@ -426,9 +446,9 @@ public class LambdaCachingAgent implements CachingAgent, AccountAware, OnDemandA
         oldKeys.stream().filter(oldKey -> !newKeys.contains(oldKey)).collect(Collectors.toSet());
 
     Map<String, Collection<String>> evictionsByKey = new HashMap<>();
-    evictionsByKey.put(getAuthoritativeKeyName(), evictedKeys);
+    evictionsByKey.put(lambdaFunctionsNamespace, evictedKeys);
     String prettyKeyName =
-        CaseFormat.UPPER_UNDERSCORE.to(CaseFormat.LOWER_CAMEL, getAuthoritativeKeyName());
+        CaseFormat.UPPER_UNDERSCORE.to(CaseFormat.LOWER_CAMEL, lambdaFunctionsNamespace);
 
     log.info(
         "Evicting "
